[package]
name = "havsalt-tools-here"
version = "0.14.0"
edition = "2021"
description = "Copies the current working directory to clipboard"
license = "MIT"
homepage = "https://github.com/havsalt/here-rs"
authors = ["Havsalt <77575424+Havsalt@users.noreply.github.com>"]

[[bin]]
name = "here"
path = "src/main.rs"

[profile.release]
opt-level = "z"

[dependencies]
clap = { version = "4.5", features = ["derive", "wrap_help"] }
cli-clipboard = "0.4"
colored = "2.1"
enigo = "0.2"
havsalt-clap-styles = "0.1"
inquire = "0.7"
path-clean = "1.0"
