[package]
name = "havsalt-here"
version = "0.17.0"
edition = "2021"
description = "Effortlessly grab and copy file locations"
license = "MIT"
homepage = "https://github.com/havsalt/here-rs"
authors = ["Havsalt <77575424+Havsalt@users.noreply.github.com>"]

[[bin]]
name = "here"
path = "src/main.rs"

[profile.release]
opt-level = "z"

[dependencies]
clap = { version = "4.5", features = ["derive", "wrap_help"] }
clap-markdown = "0.1"
clap_complete = "4.5"
cli-clipboard = "0.4"
colored = "2.1"
enigo = "0.2"
havsalt-clap-styles = "0.1"
inquire = "0.7"
path-clean = "1.0"
